# duburi_ws

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_duburi.sh  requirements.txt
.claude/: settings.local.json
.claude/context/: ardusub-canon.md  ardusub-reference.md  axis-isolation.md  client-and-dsl-api.md  command-reference.md  dvl-integration.md  future-bno-into-ekf.md  future-registry-shrinkage.md  goals.md  hardware-setup.md  heading-lock.md  known-issues.md  mavlink-reference.md  mavlink-references.md  mission-cookbook.md  mission-design.md  pid-theory.md  pool-day.md  proven-patterns.md  ros2-conventions.md  sensors-pipeline.md  sim-setup.md  testing-guide.md  vehicle-spec.md  vision-architecture.md  vision-roadmap.md  yaw-stability-and-fusion.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: poc-check.yml
docs/: JETSON_SETUP.md  _config.yml  configuration.md  index.html  telemetry.md  troubleshooting.md  tuning.md
src/duburi_control/: package.xml  setup.cfg  setup.py
src/duburi_control/duburi_control/: __init__.py  commands.py  depth_lock.py  duburi.py  duburi_vision_mixin.py  errors.py  heading_lock.py  heartbeat.py  mavlink_api.py  motion_common.py  motion_depth.py  motion_forward.py  motion_lateral.py  motion_linear.py  motion_profiles.py  motion_rates.py  motion_vision.py  motion_writers.py  motion_yaw.py  movement_commands.py  movement_depth.py  movement_linear.py  movement_pids.py  movement_yaw.py  pixhawk.py  tracing.py  vision_verbs.py
src/duburi_control/test/: test_commands.py  test_depth_lock.py  test_duburi.py  test_heading_lock.py  test_heartbeat.py  test_motion_easing.py  test_motion_forward.py  test_motion_lateral.py  test_motion_profiles.py  test_pixhawk_helpers.py
src/duburi_interfaces/: CMakeLists.txt  package.xml
src/duburi_interfaces/action/: Move.action
src/duburi_interfaces/msg/: DuburiState.msg
src/duburi_manager/: package.xml  setup.cfg  setup.py
src/duburi_manager/config/: modes.yaml  vision_tunables.yaml
src/duburi_manager/duburi_manager/: __init__.py  auv_manager_node.py  bringup_check.py  cli.py  client.py  connection_config.py  test_runner.py  vision_state.py  vision_tunables.py
src/duburi_manager/launch/: bringup.launch.py
src/duburi_planner/: package.xml  setup.cfg  setup.py
src/duburi_planner/duburi_planner/: __init__.py  cli.py  client.py  duburi_dsl.py  mission.py
src/duburi_planner/duburi_planner/missions/: __init__.py  arc_demo.py  find_person_demo.py  gate_flare_prequal.py  gate_prequal.py  heading_lock_demo.py  mission.py  move_and_see.py  pursue_demo.py  robosub_prequal.py  square_pattern.py
src/duburi_planner/duburi_planner/state_machines/: README.md  __init__.py
src/duburi_planner/test/: test_missions_smoke.py
src/duburi_sensors/: package.xml  setup.cfg  setup.py
src/duburi_sensors/config/: sensors.yaml
src/duburi_sensors/duburi_sensors/: __init__.py  factory.py  sensors_node.py
src/duburi_sensors/duburi_sensors/sources/: __init__.py  base.py  bno085.py  composite_bno_dvl.py  dvl_stub.py  mavlink_ahrs.py  nucleus_dvl.py  nucleus_parser.py  witmotion_stub.py
src/duburi_sensors/firmware/: esp32c3_bno085.ino  esp32c3_bno085.md
src/duburi_vision/: package.xml  setup.cfg  setup.py
src/duburi_vision/config/: cameras.yaml  detector.yaml  tracker.yaml
src/duburi_vision/duburi_vision/: __init__.py  camera_node.py  config.py  detector_node.py  draw.py  factory.py  preflight.py  tracker_node.py  vision_node.py
src/duburi_vision/duburi_vision/cameras/: __init__.py  blueos_stub.py  camera.py  jetson_stub.py  mavlink_stub.py  ros_topic.py  video_file.py  webcam.py
src/duburi_vision/duburi_vision/detection/: __init__.py  class_index.py  detector.py  gpu.py  messages.py  yolo.py
src/duburi_vision/duburi_vision/filters/: PLAN.md  __init__.py
src/duburi_vision/duburi_vision/tracking/: PLAN.md  __init__.py  bytetrack.py  kalman.py  tracker.py
src/duburi_vision/duburi_vision/utils/: __init__.py  check_pipeline.py  check_thrust.py  check_tracker.py
src/duburi_vision/launch/: cameras_.launch.py  debug_view.launch.py  sim_demo.launch.py  webcam_demo.launch.py
src/duburi_vision/models/: README.md  yolo26_nano_pretrained.yaml
src/duburi_vision/test/: test_detector.py  test_factory.py  test_gpu.py  test_messages.py
