<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duburi_interfaces</name>
  <version>0.1.0</version>
  <description>
    ROS2 interface definitions for the Mongla control stack.
      action/Move.action      -- unified dispatcher used by every CLI verb
                                 and mission script.
      msg/DuburiState.msg     -- typed state snapshot published on
                                 /duburi/state by auv_manager_node.
                                 (Type name kept for namespace compatibility.)
  </description>
  <maintainer email="mongla@example.com">Mongla project</maintainer>
  <license>MIT</license>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
