<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duburi_manager</name>
  <version>0.1.0</version>
  <description>Mongla AUV manager — MAVLink connection, live logger, action server, command dispatcher</description>
  <maintainer email="mongla@example.com">Mongla project</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>duburi_control</depend>
  <depend>duburi_interfaces</depend>
  <depend>duburi_sensors</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
