<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duburi_planner</name>
  <version>0.1.0</version>
  <description>
    Mongla high-level mission planner. Provides the DuburiClient Python
    API over /duburi/move, the `duburi` CLI, and a registry of mission
    scripts (square_pattern, arc_demo, heading_lock_demo). Future home
    for YASMIN state-machine plans that extend the same Python client.
  </description>
  <maintainer email="mongla@example.com">Mongla project</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>duburi_control</depend>
  <depend>duburi_interfaces</depend>
  <depend>duburi_manager</depend>
  <depend>vision_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
