<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duburi_vision</name>
  <version>0.1.0</version>
  <description>
    Perception package for Duburi: a uniform Camera interface (laptop webcam,
    Gazebo image topic, plus Jetson/BlueOS/MAVLink stubs), YOLO26 detector with
    GPU-first inference, and rich on-image visualizations (boxes, labels,
    crosshair, alignment markers, offset readout) so problems are visible in
    one frame. Tracking and Kalman filtering land later in v2/v3.
  </description>
  <maintainer email="fahim.2002.faisal@gmail.com">Muhammad Fahim Faisal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>duburi_interfaces</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
